stylesheet: fix facebook button alignment

--- a/assets/themes/slate/css/stylesheet.css
+++ b/assets/themes/slate/css/stylesheet.css
@@ -376,6 +376,9 @@ Full-Width Styles
   background: #212121;
 }
 
+.fb_iframe_widget {
+  overflow: hidden;
+}
 
 
 /*******************************************************************************
